--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,12 @@
 site_address: 127.0.0.1:8080
 db_string: "root:root@tcp(127.0.0.1:3306)/user_center?charset=utf8mb4&parseTime=True&loc=Local"
 log_path: logs/
-session_name: RADID
+key_lookup: cookie:RADID
 redis:
   network: tcp
   addr: 127.0.0.1
   port: 6379
   prefix: ""
+  user: ""
   password: ""
+  db: 0
